# kappa

./: .gitignore  pyproject.toml
kappa/: kappa.py  kappa_xspec.py
