[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kappa"
description = "An implementation of the kappa model for xspec"
readme = "README.txt"
dependencies = ["numpy", "pyatomdb"]
version = "v0.1.0"

[tool.setuptools]
packages = ["kappa"]